[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui_elements/assets/themes/suspect_ui.tres" type="Theme" id=1]
[ext_resource path="res://ui_elements/menu_base.gd" type="Script" id=2]
[ext_resource path="res://ui_elements/background.tscn" type="PackedScene" id=3]

[node name="MenuBase" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Darken" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.454902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitMenu" type="PopupPanel" parent="."]
margin_right = 639.0
margin_bottom = 230.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ExitMenu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 631.0
margin_bottom = 222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ExitMenu/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 603.0
margin_bottom = 194.0

[node name="Label" type="Label" parent="ExitMenu/MarginContainer/VBoxContainer"]
margin_right = 583.0
margin_bottom = 74.0
text = "Do you wish to exit the game?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ExitMenu/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 583.0
margin_bottom = 174.0

[node name="HBoxContainer" type="HBoxContainer" parent="ExitMenu/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 137.0
margin_right = 446.0
margin_bottom = 84.0

[node name="Exit" type="Button" parent="ExitMenu/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 119.0
margin_bottom = 84.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="ExitMenu/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 309.0
margin_bottom = 84.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ExitMenu/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ExitMenu/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
